--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="./index.js"></script>
+  <link rel="stylesheet" href="./index.css">
   <style>
     h1 {
       color: red;
@@ -16,6 +18,7 @@
 <body>
   nagiown
   <h1>dwa</h1>
+  dwadaw
 </body>
 
 </html>
